# donut-masker-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: METHODOLOGY.md  POSTPROCESSING.md  RESULTS.md  SETUP.md
include/: BatchProcessor.hpp  BoundaryRefiner.hpp  CandidateDetector.hpp  ContourExtractor.hpp  DetectionResult.hpp  DonutDetector.hpp  DonutMaskGenerator.hpp  HoleDetector.hpp  ImageLoader.hpp  Preprocessor.hpp
src/: BatchProcessor.cpp  BoundaryRefiner.cpp  CandidateDetector.cpp  ContourExtractor.cpp  DonutDetector.cpp  DonutMaskGenerator.cpp  HoleDetector.cpp  ImageLoader.cpp  Preprocessor.cpp  main.cpp
